<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/panel_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/InputPanel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorInputLabelBackground">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TextView
                        android:text="@string/label_task_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/InputLabel" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <TextView
                        android:id="@+id/tv_task_description_requirement"
                        android:text="@string/label_required"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/InputRequiredLabel" />

                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textDirection="locale"
                    android:textAlignment="gravity"/>

                <TextView
                    android:id="@+id/tv_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    style="@style/ReadOnlyMode" />

            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputButton" />

        <LinearLayout
            android:id="@+id/panel_task_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/InputPanel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorInputLabelBackground">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TextView
                        android:text="@string/label_task_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/InputLabel" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <TextView
                        android:id="@+id/tv_task_note_requirement"
                        android:text="@string/label_optional"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/InputOptionalLabel" />

                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_task_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="7"
                    android:gravity="top"
                    android:textDirection="locale"
                    android:textAlignment="gravity"/>

                <TextView
                    android:id="@+id/tv_task_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:minLines="7"
                    style="@style/ReadOnlyMode" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
