<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/panel_deadline_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/InputPanel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorInputLabelBackground">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TextView
                        android:text="@string/label_deadline_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/InputLabel" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <TextView
                        android:id="@+id/tv_deadline_title_requirement"
                        android:text="@string/label_required"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/InputRequiredLabel" />

                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_deadline_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textDirection="locale"
                    android:textAlignment="gravity"/>

                <TextView
                    android:id="@+id/tv_deadline_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    style="@style/ReadOnlyMode" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/panel_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/InputPanel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorInputLabelBackground">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TextView
                        android:text="@string/label_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/InputLabel" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <TextView
                        android:id="@+id/tv_deadline_optional_requirement"
                        android:text="@string/label_required"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/InputRequiredLabel" />

                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_set_date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_deadline_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:padding="6dp"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorBackground"/>

                <TextView
                    android:id="@+id/tv_deadline_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:padding="6dp"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/panel_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/InputPanel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorInputLabelBackground">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TextView
                        android:text="@string/label_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/InputLabel" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <TextView
                        android:id="@+id/tv_deadline_notificaton_requirement"
                        android:text="@string/label_optional"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/InputOptionalLabel" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_set_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notifications_24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/_24hrs_label_notification_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <Switch
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center|end"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputButton" />

    </LinearLayout>

</ScrollView>
